force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <description>A Product record contains all the necessary information about a particular product and its price, from its Manufacturer, to its Price Details, Category, Manufacture Status, and Address Details for Billing, Dealer, Taxes and Allowances etc</description>
    <label>Product</label>
    <nameField>
        <displayFormat>PB NO -{0000}</displayFormat>
        <label>Price Book Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>