force-app/main/default/objects/Product__c/fields/Boat_Costline__c.field-meta.xml
<CustomField>
    <fullName>Boat_Costline__c</fullName>
    <description>This is the minimum expected selling deal margin</description>
    <label>Boat Costline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>