force-app/main/default/objects/Product__c/fields/Boat_Length_in_feets__c.field-meta.xml
<CustomField>
    <fullName>Boat_Length_in_feets__c</fullName>
    <label>Boat Length (in feets)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>