force-app/main/default/objects/Product__c/fields/Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Specifies the Cost Price of the product.</inlineHelpText>
    <label>Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>