force-app/main/default/objects/Product__c/fields/Custom__c.field-meta.xml
<CustomField>
    <fullName>Custom__c</fullName>
    <label>Custom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>