force-app/main/default/objects/Product__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <description>Displays a list of Dealers providing the Product.</description>
    <label>Dealer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>South Indian Water Sport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>