force-app/main/default/objects/Product__c/fields/Default_Costline__c.field-meta.xml
<CustomField>
    <fullName>Default_Costline__c</fullName>
    <label>Default Costline Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>