force-app/main/default/objects/Product__c/fields/Hull_Id__c.field-meta.xml
<CustomField>
    <fullName>Hull_Id__c</fullName>
    <description>Specifies the Hull Id of the Product.</description>
    <label>HIN Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>