force-app/main/default/objects/Product__c/fields/M_Boat_Actual_Cost_Value_ACV__c.field-meta.xml
<CustomField>
    <fullName>M_Boat_Actual_Cost_Value_ACV__c</fullName>
    <description>Specifies the Actual Value Cost of the Boat.</description>
    <label>Boat Actual Cost Value (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>