force-app/main/default/objects/Product__c/fields/M_Boat_MSRP_PRICE__c.field-meta.xml
<CustomField>
    <fullName>M_Boat_MSRP_PRICE__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Specifies the MSRP Price of the Boat.Value of this field is mapped to Boat Builder wizard,Quotation and Inventory.</inlineHelpText>
    <label>Boat MSRP PRICE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>