force-app/main/default/objects/Product__c/fields/M_Boat_Reg_Fee__c.field-meta.xml
<CustomField>
    <fullName>M_Boat_Reg_Fee__c</fullName>
    <description>Specifies the Registration Fee of the Boat.</description>
    <label>Boat Reg Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>