force-app/main/default/objects/Product__c/fields/M_Boat_Sales_Tax_Calculated__c.field-meta.xml
<CustomField>
    <fullName>M_Boat_Sales_Tax_Calculated__c</fullName>
    <description>Calculates the Boat Sales Tax,using the Net Selling Price of the boat.</description>
    <formula>M_Boat_Sales_Tax_Calculated_Backend__c</formula>
    <label>Boat Sales Tax (Calculated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>