force-app/main/default/objects/Product__c/fields/M_Boat_Sales_Tax_Calculated_Backend__c.field-meta.xml
<CustomField>
    <fullName>M_Boat_Sales_Tax_Calculated_Backend__c</fullName>
    <label>Boat Sales Tax (Calculated) Backend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>