force-app/main/default/objects/Product__c/fields/M_Boat_Trade_Over_Allowance_Calculated__c.field-meta.xml
<CustomField>
    <fullName>M_Boat_Trade_Over_Allowance_Calculated__c</fullName>
    <description>Specified the Boat Trade Over Allowance,Calculated by reducing ACV from Trade Allowance</description>
    <formula>M_Boat_Trade_Allowance__c  -  M_Boat_Actual_Cost_Value_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Trade Over Allowance (Calculated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>