force-app/main/default/objects/Product__c/fields/M_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>M_Date_Received__c</fullName>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>