force-app/main/default/objects/Product__c/fields/M_Deal_Margin__c.field-meta.xml
<CustomField>
    <fullName>M_Deal_Margin__c</fullName>
    <formula>( M_Hidden_Box__c -  Cost_Price__c )/ M_Hidden_Box__c</formula>
    <label>Deal Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>