force-app/main/default/objects/Product__c/fields/M_Dealer_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>M_Dealer_Base_Price__c</fullName>
    <inlineHelpText>Specifies the Base Price of the Dealer</inlineHelpText>
    <label>Dealer Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>