force-app/main/default/objects/Product__c/fields/M_Dealer_Comments__c.field-meta.xml
<CustomField>
    <fullName>M_Dealer_Comments__c</fullName>
    <description>Any Comments that the Dealer of the product wants to specify.</description>
    <label>Dealer Comments</label>
    <type>TextArea</type>
</CustomField>