force-app/main/default/objects/Product__c/fields/M_Dealer_Discount__c.field-meta.xml
<CustomField>
    <fullName>M_Dealer_Discount__c</fullName>
    <label>Dealer Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>