force-app/main/default/objects/Product__c/fields/M_Dealer_Flat_Discount__c.field-meta.xml
<CustomField>
    <fullName>M_Dealer_Flat_Discount__c</fullName>
    <label>Dealer Flat Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>