force-app/main/default/objects/Product__c/fields/M_Dealer_Status__c.field-meta.xml
<CustomField>
    <fullName>M_Dealer_Status__c</fullName>
    <description>Specifies the Status of the Dealer.</description>
    <label>Dealer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dealer Stock</fullName>
            </value>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Sale pending</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Sale Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>