force-app/main/default/objects/Product__c/fields/M_Dealer_Stock__c.field-meta.xml
<CustomField>
    <fullName>M_Dealer_Stock__c</fullName>
    <description>A unique Dealer Stock Serial Number</description>
    <label>Dealer Stock #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>