force-app/main/default/objects/Product__c/fields/M_Description__c.field-meta.xml
<CustomField>
    <fullName>M_Description__c</fullName>
    <description>Provides a brief description of the Allowances on the Product</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>