force-app/main/default/objects/Product__c/fields/M_Discount__c.field-meta.xml
<CustomField>
    <fullName>M_Discount__c</fullName>
    <description>Specifies the Discount availed on the Product</description>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>