force-app/main/default/objects/Product__c/fields/M_Doc_Fee__c.field-meta.xml
<CustomField>
    <fullName>M_Doc_Fee__c</fullName>
    <description>Specifies the Doc Fee Tax on the Product.</description>
    <label>Doc Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>