force-app/main/default/objects/Product__c/fields/M_Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>M_Down_Payment__c</fullName>
    <description>Specifies the Down Payment on the Product.</description>
    <label>Down Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>