force-app/main/default/objects/Product__c/fields/M_Engine__c.field-meta.xml
<CustomField>
    <fullName>M_Engine__c</fullName>
    <description>Engine options are provided for the Supra and Moomba price lists here.</description>
    <label>Engine</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MModel2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ford Raptor 440 6.2L Engine by Indmar</fullName>
            </value>
            <value>
                <fullName>Ford Raptor 575 6.2L Engine by Indmar (SA, SC and SG only)</fullName>
            </value>
            <value>
                <fullName>Ford Raptor 575 6.2L Engine by Indmar (SE only)</fullName>
            </value>
            <value>
                <fullName>Ford Raptor 400 6.2L Engine by Indmar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>