force-app/main/default/objects/Product__c/fields/M_Finance_Term__c.field-meta.xml
<CustomField>
    <fullName>M_Finance_Term__c</fullName>
    <description>Specifies the Finance Term of the Product.</description>
    <label>Finance Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5 Years</fullName>
            </value>
            <value>
                <fullName>10 Years</fullName>
            </value>
            <value>
                <fullName>12 Years</fullName>
            </value>
            <value>
                <fullName>15 Years</fullName>
            </value>
            <value>
                <fullName>20 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>