force-app/main/default/objects/Product__c/fields/M_Hidden_Box__c.field-meta.xml
<CustomField>
    <fullName>M_Hidden_Box__c</fullName>
    <formula>M_Your_Price_Calculated__c  -  M_Total_Over_Allowance_Calculated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to perform calculations of Prices(internal purposes),not shown during Negotiation.</inlineHelpText>
    <label>Hidden Box</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>