force-app/main/default/objects/Product__c/fields/M_Manufacture_Status__c.field-meta.xml
<CustomField>
    <fullName>M_Manufacture_Status__c</fullName>
    <description>Specifies the Manufacturing Status of the Product</description>
    <label>Manufacture Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Ordered</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Pre production</fullName>
            </value>
            <value>
                <fullName>Pre Production Confirmed</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Cancel Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>