force-app/main/default/objects/Product__c/fields/M_Manufacturer1__c.field-meta.xml
<CustomField>
    <fullName>M_Manufacturer1__c</fullName>
    <description>Displays a list of Manufacturers providing the Product.</description>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Skiers Choice(Moomba)</fullName>
            </value>
            <value>
                <fullName>Skiers Choice(Supra)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>