force-app/main/default/objects/Product__c/fields/M_Model_Variant__c.field-meta.xml
<CustomField>
    <fullName>M_Model_Variant__c</fullName>
    <description>Dependent on Model picklist.</description>
    <label>Model Variant</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MModel2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>SC400</fullName>
            </value>
            <value>
                <fullName>SC450</fullName>
            </value>
            <value>
                <fullName>SC550</fullName>
            </value>
            <value>
                <fullName>SA400</fullName>
            </value>
            <value>
                <fullName>SA450</fullName>
            </value>
            <value>
                <fullName>SA550</fullName>
            </value>
            <value>
                <fullName>SG400</fullName>
            </value>
            <value>
                <fullName>SG450</fullName>
            </value>
            <value>
                <fullName>SG550</fullName>
            </value>
            <value>
                <fullName>SE450</fullName>
            </value>
            <value>
                <fullName>SE550</fullName>
            </value>
            <value>
                <fullName>SE550 Roush Edition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>