force-app/main/default/objects/Product__c/fields/M_Net_Selling_Price_Calculated__c.field-meta.xml
<CustomField>
    <fullName>M_Net_Selling_Price_Calculated__c</fullName>
    <description>Calculated by Subtracting Trade Allowances from Your Price</description>
    <formula>IF((M_Boat_Trade_Allowance__c +  M_Trailer_Trade_Allowance__c)&lt; M_Your_Price_Calculated__c  ,M_Your_Price_Calculated__c - (M_Boat_Trade_Allowance__c +  M_Trailer_Trade_Allowance__c)  ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Selling Price (Calculated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>