force-app/main/default/objects/Product__c/fields/M_Option_Category__c.field-meta.xml
<CustomField>
    <fullName>M_Option_Category__c</fullName>
    <description>Dependent on Manufacturer</description>
    <label>Option Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MModel2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Engine Options</fullName>
            </value>
            <value>
                <fullName>Gelcoat Spray Pattern (1A)</fullName>
            </value>
            <value>
                <fullName>Gelcoat Main Color (1D)</fullName>
            </value>
            <value>
                <fullName>Gelcoat Accent Color (1C)</fullName>
            </value>
            <value>
                <fullName>Gelcoat Deck Color  (1B)</fullName>
            </value>
            <value>
                <fullName>Audio Options (7A)</fullName>
            </value>
            <value>
                <fullName>Lighting Options (7B) -</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Options (8A)</fullName>
            </value>
            <value>
                <fullName>Base Trailer (9A).</fullName>
            </value>
            <value>
                <fullName>Trailer Axle Options.</fullName>
            </value>
            <value>
                <fullName>Trailer Color Selections</fullName>
            </value>
            <value>
                <fullName>Trailer Base Color (9B)</fullName>
            </value>
            <value>
                <fullName>Trailer Pinstripe Color (9C)</fullName>
            </value>
            <value>
                <fullName>Trailer Fender Options (9D)</fullName>
            </value>
            <value>
                <fullName>Two Tone Fender Color (9E)</fullName>
            </value>
            <value>
                <fullName>Trailer Wheel Options (9F)</fullName>
            </value>
            <value>
                <fullName>Trailer Light Options (9G)</fullName>
            </value>
            <value>
                <fullName>Trailer Other Options (9H)</fullName>
            </value>
            <value>
                <fullName>Package Options</fullName>
            </value>
            <value>
                <fullName>Package and Trim Level Options (1A)</fullName>
            </value>
            <value>
                <fullName>Engines (5A)</fullName>
            </value>
            <value>
                <fullName>Engine Options (5B)</fullName>
            </value>
            <value>
                <fullName>Gelcoat Options</fullName>
            </value>
            <value>
                <fullName>Gelcoat Deck Color (1B)</fullName>
            </value>
            <value>
                <fullName>Gelcoat Deck Forward Accent (1BB)</fullName>
            </value>
            <value>
                <fullName>Gelcoat Upper Accent Color  (1C)</fullName>
            </value>
            <value>
                <fullName>Gelcoat Main Panel Color (1D)</fullName>
            </value>
            <value>
                <fullName>Gelcoat Hull Forward Accent (1DD)</fullName>
            </value>
            <value>
                <fullName>Gelcoat Hull Middle Accent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>