force-app/main/default/objects/Product__c/fields/M_Order_Date_From__c.field-meta.xml
<CustomField>
    <fullName>M_Order_Date_From__c</fullName>
    <description>Specifies the beginning date of the Order of Product.</description>
    <label>Order Date (From)</label>
    <type>Date</type>
</CustomField>