force-app/main/default/objects/Product__c/fields/M_Order_Date_To__c.field-meta.xml
<CustomField>
    <fullName>M_Order_Date_To__c</fullName>
    <description>Specifies the commencing Date of the date range of the Order Date of Product.</description>
    <label>Order Date (To)</label>
    <type>Date</type>
</CustomField>