force-app/main/default/objects/Product__c/fields/M_Payment__c.field-meta.xml
<CustomField>
    <fullName>M_Payment__c</fullName>
    <description>Specifies the Payment being made against  the Product.</description>
    <label>Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>