force-app/main/default/objects/Product__c/fields/M_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>M_Product_Family__c</fullName>
    <description>Provides a set of options of the Product Family i.e ,Boats,Engines,Trailers , etc.</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boat</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Gearboxes</fullName>
            </value>
            <value>
                <fullName>Trailers</fullName>
            </value>
            <value>
                <fullName>Transmissions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>