force-app/main/default/objects/Product__c/fields/M_Product_Retail_Price_To__c.field-meta.xml
<CustomField>
    <fullName>M_Product_Retail_Price_To__c</fullName>
    <description>Specifies the end range of the Product&apos;s Retail Price.</description>
    <label>Product Retail Price (To)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>