force-app/main/default/objects/Product__c/fields/M_Product_Salesperson_new__c.field-meta.xml
<CustomField>
    <fullName>M_Product_Salesperson_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Salesperson</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>ProductPriceDetails</relationshipName>
    <type>Lookup</type>
</CustomField>