force-app/main/default/objects/Product__c/fields/M_Purchase_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>M_Purchase_Line_Item__c</fullName>
    <description>Specifies the Purchase Line Item Auto Number,generated for every record automatically.</description>
    <displayFormat>PLI-{0000}</displayFormat>
    <label>Purchase Line Item</label>
    <type>AutoNumber</type>
</CustomField>