force-app/main/default/objects/Product__c/fields/M_Quantity__c.field-meta.xml
<CustomField>
    <fullName>M_Quantity__c</fullName>
    <description>Specifies the Quantity of the Product required.</description>
    <label>Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>