force-app/main/default/objects/Product__c/fields/M_Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>M_Quote_Date__c</fullName>
    <description>Specifies the Quote Date of the Product</description>
    <label>Quote Date</label>
    <type>Date</type>
</CustomField>