force-app/main/default/objects/Product__c/fields/M_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>M_Received_Date__c</fullName>
    <description>Specifies the date on which the product received.</description>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>