force-app/main/default/objects/Product__c/fields/M_Requested_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>M_Requested_Ship_Date__c</fullName>
    <description>Specifies the Requested Ship Date of the Product.</description>
    <label>Requested Ship Date</label>
    <type>Date</type>
</CustomField>