force-app/main/default/objects/Product__c/fields/M_Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>M_Retail_Price__c</fullName>
    <description>Specifies the Retail Price of the Product</description>
    <label>Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>