force-app/main/default/objects/Product__c/fields/M_Rfinance_Rate__c.field-meta.xml
<CustomField>
    <fullName>M_Rfinance_Rate__c</fullName>
    <description>Specifies the Rfinance Rate of the Product</description>
    <label>Rfinance Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>