force-app/main/default/objects/Product__c/fields/M_Selected_Category__c.field-meta.xml
<CustomField>
    <fullName>M_Selected_Category__c</fullName>
    <label>Selected Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>M_Option_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Flush Kit</fullName>
            </value>
            <value>
                <fullName>Water Strainer</fullName>
            </value>
            <value>
                <fullName>Spray Pattern &quot;Classic&quot;</fullName>
            </value>
            <value>
                <fullName>Spray Pattern &quot;Striker&quot;</fullName>
            </value>
            <value>
                <fullName>Spray Pattern &quot;Torqued&quot;</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Atomic Orange</fullName>
            </value>
            <value>
                <fullName>Brittany Blue</fullName>
            </value>
            <value>
                <fullName>Celestial Blue</fullName>
            </value>
            <value>
                <fullName>Charcoal</fullName>
            </value>
            <value>
                <fullName>Fire Red</fullName>
            </value>
            <value>
                <fullName>Intense Green</fullName>
            </value>
            <value>
                <fullName>Pacific Blue</fullName>
            </value>
            <value>
                <fullName>Reuben Red</fullName>
            </value>
            <value>
                <fullName>Sundance Yellow</fullName>
            </value>
            <value>
                <fullName>Atomic Orange Metal Flake</fullName>
            </value>
            <value>
                <fullName>Brittany Blue Metal Flake</fullName>
            </value>
            <value>
                <fullName>Eclipse Black Metal Flake</fullName>
            </value>
            <value>
                <fullName>Fire Red Metal Flake</fullName>
            </value>
            <value>
                <fullName>Gunmetal Metal Flake</fullName>
            </value>
            <value>
                <fullName>Intense Green Metal Flake</fullName>
            </value>
            <value>
                <fullName>Plum Crazy Purple Flake</fullName>
            </value>
            <value>
                <fullName>Silver Metal Flake</fullName>
            </value>
            <value>
                <fullName>A AM/FM/BT Aux input 4 speakers no amp</fullName>
            </value>
            <value>
                <fullName>B Add 2 Bow Speakers with Amplifier</fullName>
            </value>
            <value>
                <fullName>C Add 2 Bow Speakers and Sub with Amplifier</fullName>
            </value>
            <value>
                <fullName>D Add 2 Tower Speakers with Amplifier (Aviator)</fullName>
            </value>
            <value>
                <fullName>E Add Wiring and Amp for 2 Tower Speakers (no speakers)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>