force-app/main/default/objects/Product__c/fields/M_Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>M_Shipped_Date__c</fullName>
    <description>Specifies the date of shipping of the product</description>
    <label>Shipped Date</label>
    <type>Date</type>
</CustomField>