force-app/main/default/objects/Product__c/fields/M_Total_Amount_Financed_Calculated__c.field-meta.xml
<CustomField>
    <fullName>M_Total_Amount_Financed_Calculated__c</fullName>
    <description>Specifies the Total Amount Financed.</description>
    <formula>M_Total_Price_Calculated__c  -  M_Down_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Financed (Calculated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>