force-app/main/default/objects/Product__c/fields/M_Total_Due__c.field-meta.xml
<CustomField>
    <fullName>M_Total_Due__c</fullName>
    <description>Specifies the total due amount on the product.</description>
    <label>Total Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>