force-app/main/default/objects/Product__c/fields/M_Total_MSRP__c.field-meta.xml
<CustomField>
    <fullName>M_Total_MSRP__c</fullName>
    <description>Specified the Total MSRP Cost of the product.</description>
    <label>Total MSRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>