force-app/main/default/objects/Product__c/fields/M_Total_Over_Allowance_Calculated__c.field-meta.xml
<CustomField>
    <fullName>M_Total_Over_Allowance_Calculated__c</fullName>
    <description>Specifies the Total Trade Over Allowance,calculated by summing up Boat Trade Over Allowance and Trailer Trade Over Allowance</description>
    <formula>M_Boat_Trade_Over_Allowance_Calculated__c +   Trailer_Trade_Over_Allowance_Calculated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Over Allowance (Calculated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>