force-app/main/default/objects/Product__c/fields/M_Total_Price_Calculated__c.field-meta.xml
<CustomField>
    <fullName>M_Total_Price_Calculated__c</fullName>
    <description>Uses a formula to calculate the total price of the product.</description>
    <formula>M_Net_Selling_Price_Calculated__c  +   M_Boat_Sales_Tax_Calculated__c +  M_Trailer_Sales_Tax__c  +  M_Boat_Reg_Fee__c  +  M_Trailer_Reg_Fee__c  +  M_Doc_Fee__c  +  M_Trade_PayOFF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price (Calculated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>