force-app/main/default/objects/Product__c/fields/M_Trade_PayOFF__c.field-meta.xml
<CustomField>
    <fullName>M_Trade_PayOFF__c</fullName>
    <description>Specifies the Trade PayOFF on the product.</description>
    <label>Trade PayOFF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>