force-app/main/default/objects/Product__c/fields/M_Trailer_Actual_Cost_Value_ACV__c.field-meta.xml
<CustomField>
    <fullName>M_Trailer_Actual_Cost_Value_ACV__c</fullName>
    <description>Describes the Actual Cost Value of the product</description>
    <label>Trailer  Actual Cost Value (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>