force-app/main/default/objects/Product__c/fields/M_Trailer_MSRP_PRICE__c.field-meta.xml
<CustomField>
    <fullName>M_Trailer_MSRP_PRICE__c</fullName>
    <description>Specifies the MSRP Price of the Trailer.</description>
    <label>Trailer MSRP PRICE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>