force-app/main/default/objects/Product__c/fields/M_Trailer_Reg_Fee__c.field-meta.xml
<CustomField>
    <fullName>M_Trailer_Reg_Fee__c</fullName>
    <description>Specifies the Registration Fee on the Trailer</description>
    <label>Trailer Reg Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>