force-app/main/default/objects/Product__c/fields/M_Trailer_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>M_Trailer_Sales_Tax__c</fullName>
    <description>Specifies the Sales Tax on the Trailer</description>
    <label>Trailer Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>