force-app/main/default/objects/Product__c/fields/M_Trailer_Trade_Allowance__c.field-meta.xml
<CustomField>
    <fullName>M_Trailer_Trade_Allowance__c</fullName>
    <description>Specifies the Trade Allowance on the Trailer</description>
    <label>Trailer Trade Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>