force-app/main/default/objects/Product__c/fields/M_V_Drive__c.field-meta.xml
<CustomField>
    <fullName>M_V_Drive__c</fullName>
    <description>Specifies the Drive Type of the product</description>
    <label>V-Drive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>